GH-62: Use bash as shell in pipelines

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: required
 env:
   global:
     - ADB_INSTALL_TIMEOUT=8 # 8 minutes (2 minutes by default)
+    - SH=bash
 
 jdk:
   - oraclejdk8
