--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: android
-sudo: required
+os: linux
 env:
   global:
     - ADB_INSTALL_TIMEOUT=8 # 8 minutes (2 minutes by default)
-    - SH=bash
 
 jdk:
   - oraclejdk8
+  - oraclejdk11
 
 android:
   components:
@@ -20,12 +20,34 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
 
-script:
-  - ./gradlew install
-  - cd SpringConsumer
-  - updateSnapshots=1 ./gradlew test --debug
-  - exit 0
-  - cd KotlinConsumer
-  - ./gradlew test
-  - cd ../AndroidConsumer
-  - ./gradlew test
+stages:
+  - build
+  - test
+
+jobs:
+  include:
+    - stage: build
+      name: Build Plugin
+      jdk: oraclejdk8
+      script:
+        - ./gradlew install
+    - stage: test
+      jdk: oraclejdk8
+      name: KotlinConsumer
+      script:
+        - cd KotlinConsumer
+        - ./gradlew test
+    - stage: test
+      jdk: oraclejdk11
+      name: SpringConsumer
+      env:
+        - updateSnapshots=1
+      script:
+        - cd AndroidConsumer
+        - ./gradlew test
+    - stage: test
+      jdk: oraclejdk8
+      name: AndroidConsumer
+      script:
+        - cd AndroidConsumer
+        - ./gradlew test
