--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,15 @@ stages:
 before_script:
   - ./gradlew install
 
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+
 jobs:
   include:
     - stage: test
