--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,11 @@ jobs:
         components:
           - tools
           - platform-tools
-          - build-tools-28.0.0-rc02
-          - android-28
+          - build-tools-27.0.3
+          - android-27
+          - extra-android-support
+          - extra-google-m2repository
+          - extra-android-m2repository
       script:
         - cd AndroidConsumer
         - ./gradlew test
