--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,10 @@ jobs:
         components:
           - tools
           - platform-tools
+          - build-tools-28.0.0-rc02
           - build-tools-27.0.3
           - android-27
+          - android-28
           - extra-android-support
           - extra-google-m2repository
           - extra-android-m2repository
