--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ stages:
   - test
 
 before_script:
-  - ./gradlew ktlint test install
+  - ./gradlew install
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -18,6 +18,11 @@ cache:
 
 jobs:
   include:
+    - stage: test
+      jdk: oraclejdk9
+      name: Basic Checks
+      script:
+        - ./gradlew ktlint test
     - stage: test
       jdk: oraclejdk9
       name: KotlinConsumer
